fix various quirks and spacing inconsistencies

--- a/assets/css/base/_global.sass
+++ b/assets/css/base/_global.sass
@@ -4,6 +4,7 @@ html, body
   height: 100%
   color: $color-text
   background-color: #f9f9f9
+  overflow-x: hidden
 
 .container
   margin: 0 auto
@@ -21,6 +22,8 @@ html, body
   padding-top: 80px
   padding-bottom: 80px
   position: relative
+  &:first-child
+    padding-top: 0
 
 .terms
   h1, h2, h3
